jd intel gemini client fixes